--- a/blogbucatarie.html
+++ b/blogbucatarie.html
@@ -1,9 +1,6 @@
 
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+ <html class="no-js"> <!--<![endif]-->
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,19 +10,7 @@
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
 
-  <!--
-	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -41,7 +26,6 @@
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 
-	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
 
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -59,10 +43,7 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+
 
 	</head>
 	<body>
@@ -132,23 +113,23 @@
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Bucatarie cu stil</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Nu ai nevoie de un abonament la sala pentru a fi in forma. Niste muzica si o camera aerisita sunt de ajuns!</p>
+									<span class="posted_by">Decembrie 7</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>O bucătărie cu stil nu înseamnă neapărat un credit la bancă și nici mobilă din magazinele de firmă. </p>
 									<p><a href="5post-pilates.html">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
 
 						<div class="fh5co-blog animate-box">
-							<a href="4-post-lupta-impotriva-depresiei.html"><img class="img-responsive" src="images/frypan1.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/frypan1.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Parchet sau gresie?</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Activitatile fizice ofera foarte multe beneficii sanatatii si starii tale de spirit. Traieste mai mult, traieste mai bine!</p>
-									<p><a href="4-post-lupta-impotriva-depresiei.html">Vezi mai mult...</a></p>
+									<h3><a href=""#>S-a ars tigaia?</a></h3>
+									<span class="posted_by">Octombrie 19</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Murdaria de pe tigai reprezinta o problema cu care orice bucatar s-a confruntat cel putin o data.</p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -157,10 +138,10 @@
 							<a href="#"><img class="img-responsive" src="images/lemonade.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Biblioteca clasica</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3><a href=""#>Limonada cu menta</a></h3>
+									<span class="posted_by">Septembrie 28</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Cand viata iti da lamai…fa cumva sa faci rost si de niste menta proaspata!</p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
@@ -172,14 +153,14 @@
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="2post-beneficiile-alergarii.html"><img class="img-responsive" src="images/tort_cioco.jpg" alt=""></a>
+							<a href="1-post-tort-ciocolata.html"><img class="img-responsive" src="images/tort_cioco.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Tort de ciocolata</a></h3>
 									<span class="posted_by">Ianuarie 12</span>
-									<span class="comment"><a href="">2<i class="icon-bubble2"></i></a></span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Perfect pentru petreceri si cine festive, este usor de facut si delicios!</p>
-									<p><a href="2post-beneficiile-alergarii.html">Vezi mai mult...</a></p>
+									<p><a href="1-post-tort-ciocolata.html">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -188,23 +169,24 @@
 							<a href="#"><img class="img-responsive" src="images/spices.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Arta de perete</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Afla ce mancare te ajuta sa fii in forma!Pentru ca un plan alimentar sa fie unul de succes, stim cu totii ca avem nevoie de cele mai bune retete.</p>
+									<h3><a href=""#>Sortarea condimentelor</a></h3>
+									<span class="posted_by">Ianuarie 3</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>E timpul ca acum după sărbători să faci curat printre condimente şi să le dai un loc de onoare în bucătăria ta. </p>
 									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
+
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/kitchenbar.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/pasta.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Bombe de baie</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p><a href="#">Learn More...</a></p>
+									<h3><a href=""#>Spaghete bolognese</a></h3>
+									<span class="posted_by">Decembrie 27</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Ai rămas în pană de idei şi nu ştii ce ai putea găti la pranz sau cină? O reţetă bună de spaghete bolognese te poate scoate din încurcătură.</p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -215,14 +197,15 @@
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="4-post-lupta-impotriva-depresiei.html"><img class="img-responsive" src="images/pasta.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/kitchenbar.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Bucatarie cu stil</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Activitatile fizice ofera foarte multe beneficii sanatatii si starii tale de spirit. Traieste mai mult, traieste mai bine!</p>
-									<p><a href="4-post-lupta-impotriva-depresiei.html">Vezi mai mult...</a></p>
+									<h3><a href=""#>Cum construim un bar in bucatarie</a></h3>
+									<span class="posted_by">Decembrie 4</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Daca ai visat, dintotdeauna, sa dai petreceri memorabile la tine acasa, dar te-ai impiedicat de problema spatiului,
+										introducerea unui bar in bucatarie este o solutie excelenta.</p>
+									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
 						</div>
@@ -231,10 +214,10 @@
 							<a href="#"><img class="img-responsive" src="images/cover_bg_3.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Casa moderna</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3><a href=""#>Beneficiile alimentatiei sanatoase</a></h3>
+									<span class="posted_by">Noiembrie 19</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Adoptarea unui stil de viaţă sănătos presupune o schimbare.</p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
@@ -244,10 +227,10 @@
 							<a href="#"><img class="img-responsive" src="images/kid.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Rafturi pentru vin</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3><a href=""#>Mancare prietenoasa cu copiii</a></h3>
+									<span class="posted_by">Septembrie 30</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Nu stii ce sa gatesti pentru cel mic?</p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
@@ -285,58 +268,7 @@
 				<div class="container">
 					<div class="row row-bottom-padded-md">
 						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-					<!--		<h3>Services</h3>
-							<ul>
-								<li><a href="#">Web Development</a></li>
-								<li><a href="#">Design Strategy</a></li>
-								<li><a href="#">UI/UX Planning</a></li>
-								<li><a href="#">Photographer</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Company</h3>
-							<ul>
-								<li><a href="#">About Us</a></li>
-								<li><a href="#">Our Team</a></li>
-								<li><a href="#">Contact Us</a></li>
-								<li><a href="#">Support</a></li>
-								<li><a href="#">Career</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Our Apps</h3>
-							<ul>
-								<li><a href="#">Mobile Application</a></li>
-								<li><a href="#">Online Payment</a></li>
-								<li><a href="#">Time Monitoring</a></li>
-								<li><a href="#">Andriod Payment Gateway</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Downloads</h3>
-							<ul>
-								<li><a href="#">Apple Store</a></li>
-								<li><a href="#">Google Play</a></li>
-								<li><a href="#">Windows Store</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Services</h3>
-							<ul>
-								<li><a href="#">Web Development</a></li>
-								<li><a href="#">Design Strategy</a></li>
-								<li><a href="#">UI/UX Planning</a></li>
-								<li><a href="#">Photographer</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Connect</h3>
-							<ul>
-								<li><a href="#">Follow on Twitter</a></li>
-								<li><a href="#">Like on Facebook</a></li>
-								<li><a href="#">Circle with Google</a></li>
-								<li><a href="#">Partner with Linkedin</a></li>
-							</ul> -->
+
 						</div>
 					</div>
 					<div class="row">
@@ -348,7 +280,7 @@
 								<a href="#"><i class="icon-dribbble2"></i></a>
 								<a href="#"><i class="icon-youtube"></i></a>
 							</p>
-						<!--	<p>Copyright 2016 Free Html5 <a href="#">Module</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></p> -->
+
 						</div>
 					</div>
 				</div>
