--- a/blogcasata.html
+++ b/blogcasata.html
@@ -1,9 +1,7 @@
 
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+
+ <html class="no-js">
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,19 +11,7 @@
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
 
-  <!--
-	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -41,7 +27,7 @@
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 
-	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
+
 
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -59,10 +45,7 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+
 
 	</head>
 	<body>
@@ -117,7 +100,7 @@
 		<div id="fh5co-blog-section" >
 			<div class="container">
 				<div class="row">
-				<!--	<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">-->
+
 						<h3></h3>
 						<h3></h3>
 						<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores, perspiciatis accusamus asperiores sint consequuntur debitis.</p> -->
@@ -128,14 +111,14 @@
 				<div class="row row-bottom-padded-md">
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="5post-pilates.html"><img class="img-responsive" src="images/knitblanket.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/knitblanket.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Propria ta patura de lana</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Nu ai nevoie de un abonament la sala pentru a fi in forma. Niste muzica si o camera aerisita sunt de ajuns!</p>
-									<p><a href="5post-pilates.html">Vezi mai mult...</a></p>
+									<span class="posted_by">Decembrie 17</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Invata sa iti tricotezi propria ta patura de lana doar cu mainile!</p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -147,7 +130,7 @@
 									<h3><a href=""#>Parchet sau gresie?</a></h3>
 									<span class="posted_by">Sep. 15th</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Activitatile fizice ofera foarte multe beneficii sanatatii si starii tale de spirit. Traieste mai mult, traieste mai bine!</p>
+									<p>Inca nu te-ai hotarat cu ce acoperi podeaua? Vezi ce optiuni ai.</p>
 									<p><a href="4-post-lupta-impotriva-depresiei.html">Vezi mai mult...</a></p>
 								</div>
 							</div>
@@ -158,9 +141,9 @@
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Biblioteca clasica</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<span class="posted_by">Septembrie 17</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Cartile citite deja sunt adesea obiecte de decor. Aranjeaza-le elegant!</p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
@@ -177,8 +160,8 @@
 								<div class="prod-title">
 									<h3><a href=""#>Casa ta verde</a></h3>
 									<span class="posted_by">Ianuarie 12</span>
-									<span class="comment"><a href="">2<i class="icon-bubble2"></i></a></span>
-									<p>Perfect pentru petreceri si cine festive, este usor de facut si delicios!</p>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Plantele decorează orice colț banal al locuinței si oferă o pată de culoare încăperilor monotone.</p>
 									<p><a href="2post-beneficiile-alergarii.html">Vezi mai mult...</a></p>
 								</div>
 							</div>
@@ -189,9 +172,9 @@
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Arta de perete</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Afla ce mancare te ajuta sa fii in forma!Pentru ca un plan alimentar sa fie unul de succes, stim cu totii ca avem nevoie de cele mai bune retete.</p>
+									<span class="posted_by">Noiembrie 28</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Casa ta trebuie sa devina caminul tau.</p>
 									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
@@ -201,9 +184,9 @@
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Bombe de baie</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<span class="posted_by">Decembrie 3</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Bombe absolut naturale şi pline de bunătăţi pentru corp, minte şi suflet!</p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
@@ -215,14 +198,14 @@
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="4-post-lupta-impotriva-depresiei.html"><img class="img-responsive" src="images/hol.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/hol.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Hol cu stil</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Activitatile fizice ofera foarte multe beneficii sanatatii si starii tale de spirit. Traieste mai mult, traieste mai bine!</p>
-									<p><a href="4-post-lupta-impotriva-depresiei.html">Vezi mai mult...</a></p>
+									<span class="posted_by">Decembrie 5</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Holul poate fi o camera cu stil si perfect integrata in restul decorului.</p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -232,9 +215,9 @@
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Casa moderna</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<span class="posted_by">Decembrie 22</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Locuinte care atrag privirile datorita arhitecturii deosebite..</p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
@@ -245,9 +228,9 @@
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Rafturi pentru vin</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<span class="posted_by">Octombrie 20</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Esti colectionar de vinuri? Afla cum poti sa le etalezi cat mai frumos in casa ta.</p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
@@ -279,64 +262,12 @@
 
 
 
-
 		<footer>
 			<div id="footer">
 				<div class="container">
 					<div class="row row-bottom-padded-md">
 						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-					<!--		<h3>Services</h3>
-							<ul>
-								<li><a href="#">Web Development</a></li>
-								<li><a href="#">Design Strategy</a></li>
-								<li><a href="#">UI/UX Planning</a></li>
-								<li><a href="#">Photographer</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Company</h3>
-							<ul>
-								<li><a href="#">About Us</a></li>
-								<li><a href="#">Our Team</a></li>
-								<li><a href="#">Contact Us</a></li>
-								<li><a href="#">Support</a></li>
-								<li><a href="#">Career</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Our Apps</h3>
-							<ul>
-								<li><a href="#">Mobile Application</a></li>
-								<li><a href="#">Online Payment</a></li>
-								<li><a href="#">Time Monitoring</a></li>
-								<li><a href="#">Andriod Payment Gateway</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Downloads</h3>
-							<ul>
-								<li><a href="#">Apple Store</a></li>
-								<li><a href="#">Google Play</a></li>
-								<li><a href="#">Windows Store</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Services</h3>
-							<ul>
-								<li><a href="#">Web Development</a></li>
-								<li><a href="#">Design Strategy</a></li>
-								<li><a href="#">UI/UX Planning</a></li>
-								<li><a href="#">Photographer</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Connect</h3>
-							<ul>
-								<li><a href="#">Follow on Twitter</a></li>
-								<li><a href="#">Like on Facebook</a></li>
-								<li><a href="#">Circle with Google</a></li>
-								<li><a href="#">Partner with Linkedin</a></li>
-							</ul> -->
+
 						</div>
 					</div>
 					<div class="row">
@@ -348,7 +279,7 @@
 								<a href="#"><i class="icon-dribbble2"></i></a>
 								<a href="#"><i class="icon-youtube"></i></a>
 							</p>
-						<!--	<p>Copyright 2016 Free Html5 <a href="#">Module</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></p> -->
+
 						</div>
 					</div>
 				</div>
