--- a/bloggradina.html
+++ b/bloggradina.html
@@ -1,9 +1,6 @@
 
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+ <html class="no-js"> <!--<![endif]-->
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,19 +10,7 @@
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
 
-  <!--
-	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -128,27 +113,27 @@
 				<div class="row row-bottom-padded-md">
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="5post-pilates.html"><img class="img-responsive" src="images/strawberries.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/strawberries.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Cele mai dulci fructe</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Nu ai nevoie de un abonament la sala pentru a fi in forma. Niste muzica si o camera aerisita sunt de ajuns!</p>
-									<p><a href="5post-pilates.html">Vezi mai mult...</a></p>
+									<h3><a href=""#>Cele mai delicioase fructe</a></h3>
+									<span class="posted_by">Septembrie 19</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Piețele sunt pline în fiecare sezon de fructe specifice perioadei respective. Dar vara se găsesc cele mai gustoase, aromate și delicioase.</p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
 
 						<div class="fh5co-blog animate-box">
-							<a href="4-post-lupta-impotriva-depresiei.html"><img class="img-responsive" src="images/gazon.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/gazon.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Cand plantam gazonul?</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Activitatile fizice ofera foarte multe beneficii sanatatii si starii tale de spirit. Traieste mai mult, traieste mai bine!</p>
-									<p><a href="4-post-lupta-impotriva-depresiei.html">Vezi mai mult...</a></p>
+									<span class="posted_by">Decembrie 18</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Există câteva indicații cu privire la modalitatea în care se realizează această activitate.</p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -158,9 +143,9 @@
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Daunatorii</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<span class="posted_by">Decembrie 1</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Insectele, melcii, ciupercile, cartitele pot sa creeze probleme serioase pentru plantele tale.</p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
@@ -172,14 +157,14 @@
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="2post-beneficiile-alergarii.html"><img class="img-responsive" src="images/grbuc12.jpg" alt=""></a>
+							<a href="6-post-propria-ta-gradina.html"><img class="img-responsive" src="images/grbuc6.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Gradina in bucatarie</a></h3>
-									<span class="posted_by">Ianuarie 12</span>
-									<span class="comment"><a href="">2<i class="icon-bubble2"></i></a></span>
-									<p>Perfect pentru petreceri si cine festive, este usor de facut si delicios!</p>
-									<p><a href="2post-beneficiile-alergarii.html">Vezi mai mult...</a></p>
+									<span class="posted_by">Decembrie 30</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Vrei sa ai condimente proaspete pentru mancarurile tale in fiecare zi?</p>
+									<p><a href="6-post-propria-ta-gradina.html">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -189,9 +174,9 @@
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Ingrijirea cactusilor</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Afla ce mancare te ajuta sa fii in forma!Pentru ca un plan alimentar sa fie unul de succes, stim cu totii ca avem nevoie de cele mai bune retete.</p>
+									<span class="posted_by">Decembrie 28</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Cu numai cinci minute pe saptamana te poti asigura de sanatatea si bunastarea cactusului tau.</p>
 									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
@@ -201,9 +186,9 @@
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Legume de primavara</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<span class="posted_by">Ianuarie 1</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Legumele de primavara precum ridichile, ceapa verde, spanacul, salata verde, urzicile si loboda constituie o sursa importanta de energie pentru organism.</p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
@@ -215,14 +200,14 @@
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="4-post-lupta-impotriva-depresiei.html"><img class="img-responsive" src="images/flori.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/flori.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Flori pentru casa</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Activitatile fizice ofera foarte multe beneficii sanatatii si starii tale de spirit. Traieste mai mult, traieste mai bine!</p>
-									<p><a href="4-post-lupta-impotriva-depresiei.html">Vezi mai mult...</a></p>
+									<span class="posted_by">Decembrie 22</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Îți dorești să înfrumusețezi intrarea de la casă cu flori,dar nu ai prea mult spațiu la dispoziție?</p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -232,9 +217,9 @@
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Plantarea florilor in gradina</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<span class="posted_by">Octombrie 7</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Pentru a planta și păstra cât mai bine florile de primăvară în grădina ta, ți-am pregătit un ghid cu sfaturi de care să ții cont.</p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
@@ -245,9 +230,9 @@
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>De unde vine bradul de Craciun?</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<span class="posted_by">Decembrie 24</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Munca implicată pentru dezvoltarea unei astfel de pepiniere este imensă, iar la bază trebuie să stea cunoștințe temeinice. </p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
@@ -285,58 +270,7 @@
 				<div class="container">
 					<div class="row row-bottom-padded-md">
 						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-					<!--		<h3>Services</h3>
-							<ul>
-								<li><a href="#">Web Development</a></li>
-								<li><a href="#">Design Strategy</a></li>
-								<li><a href="#">UI/UX Planning</a></li>
-								<li><a href="#">Photographer</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Company</h3>
-							<ul>
-								<li><a href="#">About Us</a></li>
-								<li><a href="#">Our Team</a></li>
-								<li><a href="#">Contact Us</a></li>
-								<li><a href="#">Support</a></li>
-								<li><a href="#">Career</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Our Apps</h3>
-							<ul>
-								<li><a href="#">Mobile Application</a></li>
-								<li><a href="#">Online Payment</a></li>
-								<li><a href="#">Time Monitoring</a></li>
-								<li><a href="#">Andriod Payment Gateway</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Downloads</h3>
-							<ul>
-								<li><a href="#">Apple Store</a></li>
-								<li><a href="#">Google Play</a></li>
-								<li><a href="#">Windows Store</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Services</h3>
-							<ul>
-								<li><a href="#">Web Development</a></li>
-								<li><a href="#">Design Strategy</a></li>
-								<li><a href="#">UI/UX Planning</a></li>
-								<li><a href="#">Photographer</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Connect</h3>
-							<ul>
-								<li><a href="#">Follow on Twitter</a></li>
-								<li><a href="#">Like on Facebook</a></li>
-								<li><a href="#">Circle with Google</a></li>
-								<li><a href="#">Partner with Linkedin</a></li>
-							</ul> -->
+
 						</div>
 					</div>
 					<div class="row">
