--- a/blogpentrutine.html
+++ b/blogpentrutine.html
@@ -1,9 +1,6 @@
 
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+ <html class="no-js"> <!--<![endif]-->
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,19 +10,6 @@
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
 
-  <!--
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -40,8 +24,6 @@
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
-
-	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
 
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -128,27 +110,28 @@
 				<div class="row row-bottom-padded-md">
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="5post-pilates.html"><img class="img-responsive" src="images/books2018.jpeg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/books2018.jpeg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Propria ta patura de lana</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Nu ai nevoie de un abonament la sala pentru a fi in forma. Niste muzica si o camera aerisita sunt de ajuns!</p>
-									<p><a href="5post-pilates.html">Vezi mai mult...</a></p>
+									<h3><a href=""#>Cartile anului 2018</a></h3>
+									<span class="posted_by">Ianuarie 1</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>In ciuda patrunderii tehnologiei digitale in vietile noastre pana la punctul in care
+										stam toata ziua cu ochii in ecranul telefonului, ultimii ani au adus o revenire usoara a cititului.</p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
 
 						<div class="fh5co-blog animate-box">
-							<a href="4-post-lupta-impotriva-depresiei.html"><img class="img-responsive" src="images/closet.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/closet.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Parchet sau gresie?</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Activitatile fizice ofera foarte multe beneficii sanatatii si starii tale de spirit. Traieste mai mult, traieste mai bine!</p>
-									<p><a href="4-post-lupta-impotriva-depresiei.html">Vezi mai mult...</a></p>
+									<h3><a href=""#>O noua ordine in closet</a></h3>
+									<span class="posted_by">Noiembrie 16</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Vă întrebaţi ce aţi putea face într-o zi de duminică ploioasă şi friguroasă?</p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -157,10 +140,10 @@
 							<a href="#"><img class="img-responsive" src="images/firstdate.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Biblioteca clasica</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3><a href=""#>Prima intalnire?</a></h3>
+									<span class="posted_by">Decembrie 2</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Barbatii se plang de multe ori ca femeile sunt creaturi misterioase si complicate, ce sunt foarte greu de multumit.</p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
@@ -172,14 +155,14 @@
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="2post-beneficiile-alergarii.html"><img class="img-responsive" src="images/cover_bg_1.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/cover_bg_1.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Casa ta verde</a></h3>
-									<span class="posted_by">Ianuarie 12</span>
-									<span class="comment"><a href="">2<i class="icon-bubble2"></i></a></span>
-									<p>Perfect pentru petreceri si cine festive, este usor de facut si delicios!</p>
-									<p><a href="2post-beneficiile-alergarii.html">Vezi mai mult...</a></p>
+									<h3><a href=""#>Tinuta de petrecere</a></h3>
+									<span class="posted_by">Decembrie 23</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Ce sa porti astfel incat sa obtii echilibrul perfect pentru un look necesar unei petreceri?</p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -188,10 +171,10 @@
 							<a href="#"><img class="img-responsive" src="images/cover_bg_2.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Arta de perete</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Afla ce mancare te ajuta sa fii in forma!Pentru ca un plan alimentar sa fie unul de succes, stim cu totii ca avem nevoie de cele mai bune retete.</p>
+									<h3><a href=""#>Maniere la restaurant</a></h3>
+									<span class="posted_by">Decembrie 22</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Cum te îmbraci și cum te porți atunci când mânânci în oraș?</p>
 									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
@@ -200,10 +183,10 @@
 							<a href="#"><img class="img-responsive" src="images/skirt.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Bombe de baie</a></h3>
+									<h3><a href=""#>Poti deveni designer de fuste</a></h3>
 									<span class="posted_by">Sep. 15th</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Toate fetele vor sa arate feminine iar o fusta cool este cel mai bun ajutor.</p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
@@ -215,14 +198,14 @@
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="4-post-lupta-impotriva-depresiei.html"><img class="img-responsive" src="images/dogfriend.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/dogfriend.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Bucatarie cu stil</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Activitatile fizice ofera foarte multe beneficii sanatatii si starii tale de spirit. Traieste mai mult, traieste mai bine!</p>
-									<p><a href="4-post-lupta-impotriva-depresiei.html">Vezi mai mult...</a></p>
+									<h3><a href=""#>Cel mai bun prieten</a></h3>
+									<span class="posted_by">Octombrie 22</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Câinele devine cu ușurință parte din familie, cel mai bun prieten și terapie pentru zilele dificile.</p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -231,10 +214,10 @@
 							<a href="#"><img class="img-responsive" src="images/elegant.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Casa moderna</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3><a href=""#>Stilul vestimentar in cuplu</a></h3>
+									<span class="posted_by">Decembrie 10</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Totul e foarte frumos atunci cand iti gasesti jumatatea si mai ales la inceput, cand iesirile in oras sunt foarte dese.</p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
@@ -244,10 +227,10 @@
 							<a href="#"><img class="img-responsive" src="images/studymusic.png" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Rafturi pentru vin</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3><a href=""#>Playlist pentru studiu</a></h3>
+									<span class="posted_by">Septembrie 15</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Perioadele in care trebuie sa inveti pentru examene sunt extrem de stresante si este foarte important sa ai grija de sanatatea ta psihica.</p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
@@ -285,58 +268,7 @@
 				<div class="container">
 					<div class="row row-bottom-padded-md">
 						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-					<!--		<h3>Services</h3>
-							<ul>
-								<li><a href="#">Web Development</a></li>
-								<li><a href="#">Design Strategy</a></li>
-								<li><a href="#">UI/UX Planning</a></li>
-								<li><a href="#">Photographer</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Company</h3>
-							<ul>
-								<li><a href="#">About Us</a></li>
-								<li><a href="#">Our Team</a></li>
-								<li><a href="#">Contact Us</a></li>
-								<li><a href="#">Support</a></li>
-								<li><a href="#">Career</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Our Apps</h3>
-							<ul>
-								<li><a href="#">Mobile Application</a></li>
-								<li><a href="#">Online Payment</a></li>
-								<li><a href="#">Time Monitoring</a></li>
-								<li><a href="#">Andriod Payment Gateway</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Downloads</h3>
-							<ul>
-								<li><a href="#">Apple Store</a></li>
-								<li><a href="#">Google Play</a></li>
-								<li><a href="#">Windows Store</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Services</h3>
-							<ul>
-								<li><a href="#">Web Development</a></li>
-								<li><a href="#">Design Strategy</a></li>
-								<li><a href="#">UI/UX Planning</a></li>
-								<li><a href="#">Photographer</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Connect</h3>
-							<ul>
-								<li><a href="#">Follow on Twitter</a></li>
-								<li><a href="#">Like on Facebook</a></li>
-								<li><a href="#">Circle with Google</a></li>
-								<li><a href="#">Partner with Linkedin</a></li>
-							</ul> -->
+
 						</div>
 					</div>
 					<div class="row">
@@ -348,7 +280,7 @@
 								<a href="#"><i class="icon-dribbble2"></i></a>
 								<a href="#"><i class="icon-youtube"></i></a>
 							</p>
-						<!--	<p>Copyright 2016 Free Html5 <a href="#">Module</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></p> -->
+
 						</div>
 					</div>
 				</div>
