--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+ <html class="no-js">
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,16 +9,6 @@
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
 
-  <!--
-	//////////////////////////////////////////////////////
-	FREE HTML5 TEMPLATE
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-	//////////////////////////////////////////////////////
-	 -->
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -34,10 +21,9 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+
 	<link rel="shortcut icon" href="favicon.ico">
 
-	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
 
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -53,12 +39,8 @@
 	<link rel="stylesheet" href="css/style.css">
 
 
-	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+
 
 	</head>
 	<body>
@@ -75,7 +57,7 @@
 							<div class="animate-box">
 								<h2>Suntem aici pentru tine!</h2>
 
-								<!--<p><a class="btn btn-primary btn-lg" href="#">Incepe</a></p>-->
+
 							</div>
 						</div>
 					</div>
@@ -117,7 +99,7 @@
 
 
 		<div id="fh5co-feature-product" >
-	<!--	<div id="fh5co-services-section" class="fh5co-content-section"> -->
+
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
@@ -153,11 +135,7 @@
 					</div>
 				</div>
 
-			<!--	<div class="row">
-					<div class="col-md-12 text-center">
-						<a href="https://www.youtube.com/watch?v=FHH6hIc2GyE" class="link-watch popup-vimeo btn btn-primary"><i class="icon-play3"></i>Videoclip</a>
-					</div>
-				</div> -->
+
 <div class="row">
 	<div class="col-md-12 text-center">
 				<video width="900" height="500" controls>
@@ -263,61 +241,6 @@ Your browser does not support the video tag.
 		</div>
 
 
-<!--		<div id="fh5co-portfolio" class="fh5co-section-gray">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-						<h3>Galerie</h3>
-						<p>Pozele si tutorialele sunt facute de echipa noastra de gospodine dedicate. Dorim sa iti oferim autenticitate si sfaturi originale aplicate chiar de noi!</p>
-					</div>
-				</div>
-				<div class="row row-bottom-padded-md">
-					<div class="col-md-12">
-						<ul id="fh5co-portfolio-list">
-							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_2.jpg); ">
-								<a href="#" class="color-3">
-									<div class="case-studies-summary">
-										<span>Creative</span>
-										<h2>Wak in the wooden street</h2>
-									</div>
-								</a>
-							</li>
-							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_3.jpg); ">
-								<a href="#" class="color-4">
-									<div class="case-studies-summary">
-										<span>Design</span>
-										<h2>Present your product</h2>
-									</div>
-								</a>
-							</li>
-							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_1.jpg); ">
-								<a href="#" class="color-5">
-									<div class="case-studies-summary">
-										<span>Photo</span>
-										<h2>See the horizon</h2>
-									</div>
-								</a>
-							</li>
-							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/blog-1.jpg); ">
-								<a href="#" class="color-6">
-									<div class="case-studies-summary">
-										<span>Love</span>
-										<h2>Spend time with your partner</h2>
-									</div>
-								</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-4 col-md-offset-4 text-center animate-box">
-						<a href="#" class="btn btn-primary btn-lg">Vezi galeria</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	-->
-
 	<div id="fh5co-blog-section">
 		<div class="container">
 			<div class="row">
@@ -338,7 +261,7 @@ Your browser does not support the video tag.
 							<div class="prod-title">
 								<h3><a href=""#>Beneficiile Alergarii</a></h3>
 								<span class="posted_by">Ianuarie 13</span>
-								<span class="comment"><a href="">3<i class="icon-bubble2"></i></a></span>
+								<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 								<p>Alergarea e una dintre cele mai eficiente, necostisitoare moduri de a arde calorii și a fii în formă. </p>
 								<p><a href="2post-beneficiile-alergarii.html">Vezi mai mult...</a></p>
 
@@ -354,7 +277,7 @@ Your browser does not support the video tag.
 							<div class="prod-title">
 								<h3><a href=""#>Tort de Ciocolata</a></h3>
 								<span class="posted_by">Ianuarie 12</span>
-								<span class="comment"><a href="">2<i class="icon-bubble2"></i></a></span>
+								<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 								<p>Perfect pentru petreceri si cine festive, este usor de facut si delicios!</p>
 								<p><a href="1post-tort-ciocolata.html">Vezi mai mult...</a></p>
 							</div>
@@ -369,7 +292,7 @@ Your browser does not support the video tag.
 							<div class="prod-title">
 								<h3><a href=""#>Propria ta gradina in bucatarie</a></h3>
 								<span class="posted_by">Decembrie 30</span>
-								<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
+								<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 								<p>Vrei sa ai condimente proaspete pentru mancarurile tale in fiecare zi?</p>
 								<p><a href="6post-propria-ta-gradina.html">Vezi mai mult...</a></p>
 							</div>
@@ -379,11 +302,7 @@ Your browser does not support the video tag.
 				<div class="clearfix visible-md-block"></div>
 			</div>
 
-		<!--	<div class="row">
-				<div class="col-md-4 col-md-offset-4 text-center animate-box">
-					<a href="#" class="btn btn-primary btn-lg">Postarile noastre</a>
-				</div>
-			</div> -->
+
 
 		</div>
 	</div>
@@ -482,7 +401,7 @@ Your browser does not support the video tag.
 							<figure>
 								<img src="images/teo.jpg" alt="user">
 							</figure>
-							<p>Portocala <br> <span class="text-mute">Bucatareasa si vanzatoare</span></p>
+							<p>Teodora <br> <span class="text-mute">Bucatareasa si vanzatoare</span></p>
 							<blockquote>
 								<p>Este recunoscuta pentru cele mai bune retete si tehnici de ademenire a copiilor.</p>
 							</blockquote>
@@ -494,9 +413,9 @@ Your browser does not support the video tag.
 							<figure>
 								<img src="images/banana.jpg" alt="user">
 							</figure>
-							<p>Banana <br> <span class="text-mute">Spalatoreasa si psiholog</span></p>
+							<p>Ana-Maria <br> <span class="text-mute">Spalatoreasa si psiholog</span></p>
 							<blockquote>
-								<p>mai cautam</p>
+								<p>Cu vasta experienta in spalatul vaselor, va poate oferi si sfaturi de viata.</p>
 							</blockquote>
 
 						</div>
@@ -504,12 +423,6 @@ Your browser does not support the video tag.
 				</div>
 			</div>
 		</div>
-		<!-- fh5co-content-section -->
-
-
-
-		<!-- END What we do -->
-
 
 
 		<!-- fh5co-blog-section -->
@@ -518,58 +431,7 @@ Your browser does not support the video tag.
 				<div class="container">
 					<div class="row row-bottom-padded-md">
 						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-					<!--		<h3>Services</h3>
-							<ul>
-								<li><a href="#">Web Development</a></li>
-								<li><a href="#">Design Strategy</a></li>
-								<li><a href="#">UI/UX Planning</a></li>
-								<li><a href="#">Photographer</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Company</h3>
-							<ul>
-								<li><a href="#">About Us</a></li>
-								<li><a href="#">Our Team</a></li>
-								<li><a href="#">Contact Us</a></li>
-								<li><a href="#">Support</a></li>
-								<li><a href="#">Career</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Our Apps</h3>
-							<ul>
-								<li><a href="#">Mobile Application</a></li>
-								<li><a href="#">Online Payment</a></li>
-								<li><a href="#">Time Monitoring</a></li>
-								<li><a href="#">Andriod Payment Gateway</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Downloads</h3>
-							<ul>
-								<li><a href="#">Apple Store</a></li>
-								<li><a href="#">Google Play</a></li>
-								<li><a href="#">Windows Store</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Services</h3>
-							<ul>
-								<li><a href="#">Web Development</a></li>
-								<li><a href="#">Design Strategy</a></li>
-								<li><a href="#">UI/UX Planning</a></li>
-								<li><a href="#">Photographer</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Connect</h3>
-							<ul>
-								<li><a href="#">Follow on Twitter</a></li>
-								<li><a href="#">Like on Facebook</a></li>
-								<li><a href="#">Circle with Google</a></li>
-								<li><a href="#">Partner with Linkedin</a></li>
-							</ul> -->
+
 						</div>
 					</div>
 					<div class="row">
@@ -582,7 +444,7 @@ Your browser does not support the video tag.
 								<a href="#"><i class="icon-youtube"></i></a>
 							</p>
 								<p> <br>Made with <i class="icon-heart3"></i></p>
-						<!--	<p>Copyright 2016 Free Html5 <a href="#">Module</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></p> -->
+
 						</div>
 					</div>
 				</div>
