--- a/Bucatarie.html
+++ b/Bucatarie.html
@@ -1,9 +1,6 @@
 
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+ <html class="no-js"> <!--<![endif]-->
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,19 +10,7 @@
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
 
-  <!--
-	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -157,12 +142,7 @@
 					</div>
 				</div>
 
-	<!--			<div class="row">
-					<div class="col-md-12 text-center">
-						<a href="https://vimeo.com/channels/staffpicks/93951774" class="link-watch popup-vimeo btn btn-primary"><i class="icon-play3"></i>Videoclip</a>
-					</div>
-				</div>
--->
+
 			</div>
 		</div>
 
@@ -257,7 +237,7 @@
 	 							<div class="prod-title">
 	 								<h3><a href=""#>Beneficiile Alergarii</a></h3>
 	 								<span class="posted_by">Ianuarie 13</span>
-	 								<span class="comment"><a href="">3<i class="icon-bubble2"></i></a></span>
+	 								<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 	 								<p>Alergarea e una dintre cele mai eficiente, necostisitoare moduri de a arde calorii și a fii în formă. </p>
 	 								<p><a href="2post-beneficiile-alergarii.html">Vezi mai mult...</a></p>
 
@@ -273,7 +253,7 @@
 	 							<div class="prod-title">
 	 								<h3><a href=""#>Tort de Ciocolata</a></h3>
 	 								<span class="posted_by">Ianuarie 12</span>
-	 								<span class="comment"><a href="">2<i class="icon-bubble2"></i></a></span>
+	 								<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 	 								<p>Perfect pentru petreceri si cine festive, este usor de facut si delicios!</p>
 	 								<p><a href="1post-tort-ciocolata.html">Vezi mai mult...</a></p>
 	 							</div>
@@ -290,7 +270,7 @@
 								<div class="prod-title">
 									<h3><a href=""#>Propria ta gradina in bucatarie</a></h3>
 									<span class="posted_by">Decembrie 30</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Vrei sa ai condimente proaspete pentru mancarurile tale in fiecare zi?</p>
 									<p><a href="6post-propria-ta-gradina.html">Vezi mai mult...</a></p>
 	 							</div>
@@ -299,11 +279,7 @@
 	 				</div>
 	 				<div class="clearfix visible-md-block"></div>
 	 			</div>
-			<!--	<div class="row">
-					<div class="col-md-4 col-md-offset-4 text-center animate-box">
-						<a href="#" class="btn btn-primary btn-lg">Our Blog</a>
-					</div>
-				</div> -->
+
 
 			</div>
 		</div>
@@ -313,58 +289,7 @@
 				<div class="container">
 					<div class="row row-bottom-padded-md">
 						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-				<!--			<h3>Services</h3>
-							<ul>
-								<li><a href="#">Web Development</a></li>
-								<li><a href="#">Design Strategy</a></li>
-								<li><a href="#">UI/UX Planning</a></li>
-								<li><a href="#">Photographer</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Company</h3>
-							<ul>
-								<li><a href="#">About Us</a></li>
-								<li><a href="#">Our Team</a></li>
-								<li><a href="#">Contact Us</a></li>
-								<li><a href="#">Support</a></li>
-								<li><a href="#">Career</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Our Apps</h3>
-							<ul>
-								<li><a href="#">Mobile Application</a></li>
-								<li><a href="#">Online Payment</a></li>
-								<li><a href="#">Time Monitoring</a></li>
-								<li><a href="#">Andriod Payment Gateway</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Downloads</h3>
-							<ul>
-								<li><a href="#">Apple Store</a></li>
-								<li><a href="#">Google Play</a></li>
-								<li><a href="#">Windows Store</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Services</h3>
-							<ul>
-								<li><a href="#">Web Development</a></li>
-								<li><a href="#">Design Strategy</a></li>
-								<li><a href="#">UI/UX Planning</a></li>
-								<li><a href="#">Photographer</a></li>
-							</ul>
-						</div>
-						<div class="col-md-2 col-sm-2 col-xs-12 fh5co-footer-link">
-							<h3>Connect</h3>
-							<ul>
-								<li><a href="#">Follow on Twitter</a></li>
-								<li><a href="#">Like on Facebook</a></li>
-								<li><a href="#">Circle with Google</a></li>
-								<li><a href="#">Partner with Linkedin</a></li>
-							</ul> -->
+
 						</div>
 					</div>
 					<div class="row">
