--- a/Casa-ta.html
+++ b/Casa-ta.html
@@ -1,9 +1,6 @@
 
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+ <html class="no-js">
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,20 +9,6 @@
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
-
-  <!--
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -38,10 +21,9 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 
-	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
+
 
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -59,10 +41,7 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+
 
 	</head>
 	<body>
@@ -79,7 +58,7 @@
 							<div class="animate-box">
 								<h2>Zambeste, esti acasa!</h2>
 
-							<!--	 <p><a class="btn btn-primary btn-lg" href="blogcasata.html">Vezi Articole pentru casa ta</a></p> -->
+
 
 							</div>
 						</div>
@@ -119,7 +98,7 @@
 			</div>
 		</header>
 
-		<!-- end:header-top -->
+
 
 
 		<div id="fh5co-feature-product" >
@@ -158,12 +137,7 @@
 					</div>
 				</div>
 
-<!--				<div class="row">
-					<div class="col-md-12 text-center">
-						<a href="https://vimeo.com/channels/staffpicks/93951774" class="link-watch popup-vimeo btn btn-primary"><i class="icon-play3"></i>Videoclip</a>
-					</div>
-				</div>
--->
+
 			</div>
 		</div>
 
@@ -258,7 +232,7 @@
 	 							<div class="prod-title">
 	 								<h3><a href=""#>Beneficiile Alergarii</a></h3>
 	 								<span class="posted_by">Ianuarie 13</span>
-	 								<span class="comment"><a href="">3<i class="icon-bubble2"></i></a></span>
+	 								<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 	 								<p>Alergarea e una dintre cele mai eficiente, necostisitoare moduri de a arde calorii și a fii în formă. </p>
 	 								<p><a href="2post-beneficiile-alergarii.html">Vezi mai mult...</a></p>
 
@@ -274,7 +248,7 @@
 	 							<div class="prod-title">
 	 								<h3><a href=""#>Tort de Ciocolata</a></h3>
 	 								<span class="posted_by">Ianuarie 12</span>
-	 								<span class="comment"><a href="">2<i class="icon-bubble2"></i></a></span>
+	 								<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 	 								<p>Perfect pentru petreceri si cine festive, este usor de facut si delicios!</p>
 	 								<p><a href="1post-tort-ciocolata.html">Vezi mai mult...</a></p>
 	 							</div>
@@ -289,7 +263,7 @@
 								<div class="prod-title">
 									<h3><a href=""#>Propria ta gradina in bucatarie</a></h3>
 									<span class="posted_by">Decembrie 30</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Vrei sa ai condimente proaspete pentru mancarurile tale in fiecare zi?</p>
 									<p><a href="6post-propria-ta-gradina.html">Vezi mai mult...</a></p>
 	 							</div>
@@ -298,15 +272,11 @@
 	 				</div>
 	 				<div class="clearfix visible-md-block"></div>
 	 			</div>
-			<!--	<div class="row">
-					<div class="col-md-4 col-md-offset-4 text-center animate-box">
-						<a href="#" class="btn btn-primary btn-lg">Our Blog</a>
-					</div>
-				</div> -->
+
 
 			</div>
 		</div>
-		<!-- fh5co-blog-section -->
+
 		<footer>
 			<div id="footer">
 				<div class="container">
@@ -334,12 +304,10 @@
 
 
 	</div>
-	<!-- END fh5co-page -->
+
 
 	</div>
-	<!-- END fh5co-wrapper -->
 
-	<!-- jQuery -->
 
 
 	<script src="js/jquery.min.js"></script>
