--- a/blogsport.html
+++ b/blogsport.html
@@ -13,19 +13,7 @@
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
 
-  <!--
-	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -132,23 +120,23 @@
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Sportul la tine acasa</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
+									<span class="posted_by">Ianuarie 12</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Nu ai nevoie de un abonament la sala pentru a fi in forma. Niste muzica si o camera aerisita sunt de ajuns!</p>
-									<p><a href="5post-pilates.html">Vezi mai mult...</a></p>
+									<p><a href="5-post-pilates">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
 
 						<div class="fh5co-blog animate-box">
-							<a href="4-post-lupta-impotriva-depresiei.html"><img class="img-responsive" src="images/morningrun3.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/morningrun3.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Rutina de dimineata</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Activitatile fizice ofera foarte multe beneficii sanatatii si starii tale de spirit. Traieste mai mult, traieste mai bine!</p>
-									<p><a href="4-post-lupta-impotriva-depresiei.html">Vezi mai mult...</a></p>
+									<span class="posted_by">Ianuarie 1</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Te trezesti si parca ai vrea sa te culci inapoi? Vezi beneficiile miscarii de dimineata.</p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -158,9 +146,9 @@
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Tehnici de baschet</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<span class="posted_by">Decembrie 2</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Miscarile din timpul driblarilor, prinderile, pasele si sariturile cer planificare, precizie si reactii rapide.</p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
@@ -175,22 +163,22 @@
 								<div class="prod-title">
 									<h3><a href=""#>Beneficiile alergarii</a></h3>
 									<span class="posted_by">Ianuarie 12</span>
-									<span class="comment"><a href="">2<i class="icon-bubble2"></i></a></span>
-									<p>Perfect pentru petreceri si cine festive, este usor de facut si delicios!</p>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Alergarea e una dintre cele mai eficiente, necostisitoare moduri de a arde calorii și a fii în formă. </p>
 									<p><a href="2post-beneficiile-alergarii.html">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
 
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/micdejuncampion.jpg" alt=""></a>
+							<a href="7-post-mancarea-campionilor.html"><img class="img-responsive" src="images/micdejuncampion.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Mancarea campionilor</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
+									<span class="posted_by">Decembrie 20</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Afla ce mancare te ajuta sa fii in forma!Pentru ca un plan alimentar sa fie unul de succes, stim cu totii ca avem nevoie de cele mai bune retete.</p>
-									<p><a href="#">Vezi mai mult...</a></p>
+									<p><a href="7-post-mancarea-campionilor.html">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -198,10 +186,10 @@
 							<a href="#"><img class="img-responsive" src="images/horseride.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Calaritul</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3><a href=""#>Calaria</a></h3>
+									<span class="posted_by">Decembrie 23</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Exista beneficii dincolo de placerea de a calarii; din punct de vedere fizic, mental si emotional.</p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
@@ -217,8 +205,8 @@
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Lupta impotriva depresiei</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
+									<span class="posted_by">Ianuarie 7</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Activitatile fizice ofera foarte multe beneficii sanatatii si starii tale de spirit. Traieste mai mult, traieste mai bine!</p>
 									<p><a href="4-post-lupta-impotriva-depresiei.html">Vezi mai mult...</a></p>
 								</div>
@@ -229,10 +217,10 @@
 							<a href="#"><img class="img-responsive" src="images/ski1.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Tehnici de baschet</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3><a href=""#>Sporturi de iarna</a></h3>
+									<span class="posted_by">Decembrie 18</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>Mai sunt câteva zile şi vine vacanţa, iar zapada vine odata cu ea.</p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
@@ -243,9 +231,9 @@
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Playlist pentru sala</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<span class="posted_by">Decembrie 2</span>
+									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
+									<p>De la muzica rock la muzica clasica - vezi cele mai energice piese care te pun cu adevarat in miscare! </p>
 									<p><a href="#">Learn More...</a></p>
 								</div>
 							</div>
